--- a/PP3/Web.config
+++ b/PP3/Web.config
@@ -1,14 +1,27 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obter mais informações sobre como configurar seu aplicativo ASP.NET, visite
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   
+    <appSettings>
+        <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\TempImageFiles\;" />
+    </appSettings>
     <connectionStrings>
     <add name="PP3ConexaoBD" connectionString="Data Source=regulus.cotuca.unicamp.br;Initial Catalog=PR317197;Persist Security Info=True;User ID=PR317197; Password='PR317197'" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <httpHandlers>
+      <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        validate="false" />
+    </httpHandlers>
+    <pages>
+      <controls>
+        <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting"
+          assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      </controls>
+    </pages>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
@@ -23,9 +36,9 @@
     </compilers>
   </system.codedom>
 <system.webServer>
-
-<handlers>
-      <add name="ChartImg" verb="*" path="ChartImg.axd"  type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"  />
-    </handlers>
+  <handlers>
+    <add name="ChartImg" verb="*" path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+  </handlers>
+  <validation validateIntegratedModeConfiguration="false" />
 </system.webServer>
 </configuration>
