varias coisa sei nem citar

--- a/PP3/PP3.csproj
+++ b/PP3/PP3.csproj
@@ -54,6 +54,7 @@
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web.DataVisualization" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -72,6 +73,52 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll" />
+    <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml" />
+    <Content Include="bin\Microsoft.Owin.dll" />
+    <Content Include="bin\Microsoft.Owin.xml" />
+    <Content Include="bin\Owin.dll" />
+    <Content Include="bin\PP3.dll" />
+    <Content Include="bin\PP3.pdb" />
+    <Content Include="bin\roslyn\csc.exe" />
+    <Content Include="bin\roslyn\csi.exe" />
+    <Content Include="bin\roslyn\Microsoft.Build.Tasks.CodeAnalysis.dll" />
+    <Content Include="bin\roslyn\Microsoft.CodeAnalysis.CSharp.dll" />
+    <Content Include="bin\roslyn\Microsoft.CodeAnalysis.CSharp.Scripting.dll" />
+    <Content Include="bin\roslyn\Microsoft.CodeAnalysis.dll" />
+    <Content Include="bin\roslyn\Microsoft.CodeAnalysis.Scripting.dll" />
+    <Content Include="bin\roslyn\Microsoft.CodeAnalysis.VisualBasic.dll" />
+    <Content Include="bin\roslyn\Microsoft.DiaSymReader.Native.amd64.dll" />
+    <Content Include="bin\roslyn\Microsoft.DiaSymReader.Native.x86.dll" />
+    <Content Include="bin\roslyn\Microsoft.Win32.Primitives.dll" />
+    <Content Include="bin\roslyn\System.AppContext.dll" />
+    <Content Include="bin\roslyn\System.Collections.Immutable.dll" />
+    <Content Include="bin\roslyn\System.Console.dll" />
+    <Content Include="bin\roslyn\System.Diagnostics.FileVersionInfo.dll" />
+    <Content Include="bin\roslyn\System.Diagnostics.Process.dll" />
+    <Content Include="bin\roslyn\System.Diagnostics.StackTrace.dll" />
+    <Content Include="bin\roslyn\System.IO.Compression.dll" />
+    <Content Include="bin\roslyn\System.IO.FileSystem.dll" />
+    <Content Include="bin\roslyn\System.IO.FileSystem.DriveInfo.dll" />
+    <Content Include="bin\roslyn\System.IO.FileSystem.Primitives.dll" />
+    <Content Include="bin\roslyn\System.IO.Pipes.dll" />
+    <Content Include="bin\roslyn\System.Reflection.Metadata.dll" />
+    <Content Include="bin\roslyn\System.Security.AccessControl.dll" />
+    <Content Include="bin\roslyn\System.Security.Claims.dll" />
+    <Content Include="bin\roslyn\System.Security.Cryptography.Algorithms.dll" />
+    <Content Include="bin\roslyn\System.Security.Cryptography.Encoding.dll" />
+    <Content Include="bin\roslyn\System.Security.Cryptography.Primitives.dll" />
+    <Content Include="bin\roslyn\System.Security.Cryptography.X509Certificates.dll" />
+    <Content Include="bin\roslyn\System.Security.Principal.Windows.dll" />
+    <Content Include="bin\roslyn\System.Text.Encoding.CodePages.dll" />
+    <Content Include="bin\roslyn\System.Threading.Thread.dll" />
+    <Content Include="bin\roslyn\System.ValueTuple.dll" />
+    <Content Include="bin\roslyn\System.Xml.ReaderWriter.dll" />
+    <Content Include="bin\roslyn\System.Xml.XmlDocument.dll" />
+    <Content Include="bin\roslyn\System.Xml.XPath.dll" />
+    <Content Include="bin\roslyn\System.Xml.XPath.XDocument.dll" />
+    <Content Include="bin\roslyn\vbc.exe" />
+    <Content Include="bin\roslyn\VBCSCompiler.exe" />
     <Content Include="css\ajax-loader.gif" />
     <Content Include="css\animate.css" />
     <Content Include="css\bootstrap-grid.css.map" />
@@ -100,7 +147,18 @@
     <Content Include="index.aspx" />
     <Content Include="Login.Master" />
     <Content Include="css\.DS_Store" />
+    <Content Include="bin\PP3.dll.config" />
+    <Content Include="bin\roslyn\csc.exe.config" />
+    <Content Include="bin\roslyn\csc.rsp" />
+    <Content Include="bin\roslyn\csi.exe.config" />
+    <Content Include="bin\roslyn\csi.rsp" />
+    <Content Include="bin\roslyn\Microsoft.CSharp.Core.targets" />
+    <Content Include="bin\roslyn\Microsoft.VisualBasic.Core.targets" />
+    <Content Include="bin\roslyn\vbc.exe.config" />
+    <Content Include="bin\roslyn\vbc.rsp" />
+    <Content Include="bin\roslyn\VBCSCompiler.exe.config" />
     <None Include="packages.config" />
+    <Content Include="LogOFF.aspx" />
     <Content Include="medico.aspx" />
     <Content Include="secretaria.aspx" />
     <Content Include="Site.Master" />
@@ -108,11 +166,16 @@
     <Content Include="u\medico\consulta.aspx" />
     <Content Include="u\medico\graficos.aspx" />
     <Content Include="u\medico\index.aspx" />
+    <Content Include="u\paciente\Avaliacao.aspx" />
+    <Content Include="u\paciente\Diagnostico.aspx" />
+    <Content Include="u\paciente\index.aspx" />
     <Content Include="u\secretario\Agenda.aspx" />
     <Content Include="u\secretario\CadastroSelec.aspx" />
     <Content Include="u\secretario\index.aspx" />
+    <Content Include="u\secretario\Relatorios.aspx" />
     <Content Include="u\secretario\secretario.Master" />
     <Content Include="u\medico\Medico.Master" />
+    <Content Include="u\paciente\Paciente.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -135,7 +198,6 @@
     <Content Include="js\bootstrap.js" />
     <Content Include="js\jquery.min.js" />
     <Content Include="Login.aspx" />
-    <Content Include="u\paciente\foipaciente.aspx" />
     <Content Include="u\secretario\cadastro.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -165,6 +227,13 @@
     <Compile Include="Login.Master.designer.cs">
       <DependentUpon>Login.Master</DependentUpon>
     </Compile>
+    <Compile Include="LogOFF.aspx.cs">
+      <DependentUpon>LogOFF.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="LogOFF.aspx.designer.cs">
+      <DependentUpon>LogOFF.aspx</DependentUpon>
+    </Compile>
     <Compile Include="medico.aspx.cs">
       <DependentUpon>medico.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -172,6 +241,9 @@
     <Compile Include="medico.aspx.designer.cs">
       <DependentUpon>medico.aspx</DependentUpon>
     </Compile>
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="secretaria.aspx.cs">
       <DependentUpon>secretaria.aspx</DependentUpon>
@@ -222,12 +294,33 @@
     <Compile Include="u\medico\Medico.Master.designer.cs">
       <DependentUpon>Medico.Master</DependentUpon>
     </Compile>
-    <Compile Include="u\paciente\foipaciente.aspx.cs">
-      <DependentUpon>foipaciente.aspx</DependentUpon>
+    <Compile Include="u\paciente\Avaliacao.aspx.cs">
+      <DependentUpon>Avaliacao.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="u\paciente\foipaciente.aspx.designer.cs">
-      <DependentUpon>foipaciente.aspx</DependentUpon>
+    <Compile Include="u\paciente\Avaliacao.aspx.designer.cs">
+      <DependentUpon>Avaliacao.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="u\paciente\Diagnostico.aspx.cs">
+      <DependentUpon>Diagnostico.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="u\paciente\Diagnostico.aspx.designer.cs">
+      <DependentUpon>Diagnostico.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="u\paciente\index.aspx.cs">
+      <DependentUpon>index.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="u\paciente\index.aspx.designer.cs">
+      <DependentUpon>index.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="u\paciente\Paciente.Master.cs">
+      <DependentUpon>Paciente.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="u\paciente\Paciente.Master.designer.cs">
+      <DependentUpon>Paciente.Master</DependentUpon>
     </Compile>
     <Compile Include="u\secretario\Agenda.aspx.cs">
       <DependentUpon>Agenda.aspx</DependentUpon>
@@ -256,6 +349,13 @@
     </Compile>
     <Compile Include="u\secretario\index.aspx.designer.cs">
       <DependentUpon>index.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="u\secretario\Relatorios.aspx.cs">
+      <DependentUpon>Relatorios.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="u\secretario\Relatorios.aspx.designer.cs">
+      <DependentUpon>Relatorios.aspx</DependentUpon>
     </Compile>
     <Compile Include="u\secretario\secretario.Master.cs">
       <DependentUpon>secretario.Master</DependentUpon>
